--- a/RealEstate/RealEstate.entitlements
+++ b/RealEstate/RealEstate.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.realestate.widgets</string>
+		<string>group.realty.widget</string>
 	</array>
 </dict>
 </plist>
